crates/pg_syntax/tests/snapshots/postgres_regress/pg_lsn@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'FFFFFFFF/FFFFFFFF'::pg_lsn - ('FFFFFFFF/FFFFFFFF'::pg_lsn - '0/0'::pg_lsn);"
---
SelectStmt@0..83
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..81
    AExpr@7..81
      TypeCast@7..34
        AConst@7..26
          Sconst@7..26 "'FFFFFFFF/FFFFFFFF'"
        Typecast@26..28 "::"
        TypeName@28..34
          Ident@28..34 "pg_lsn"
      Whitespace@34..35 " "
      Ascii45@35..36 "-"
      Whitespace@36..37 " "
      Ascii40@37..38 "("
      AExpr@38..81
        TypeCast@38..65
          AConst@38..57
            Sconst@38..57 "'FFFFFFFF/FFFFFFFF'"
          Typecast@57..59 "::"
          TypeName@59..65
            Ident@59..65 "pg_lsn"
        Whitespace@65..66 " "
        Ascii45@66..67 "-"
        Whitespace@67..68 " "
        TypeCast@68..81
          AConst@68..73
            Sconst@68..73 "'0/0'"
          Typecast@73..75 "::"
          TypeName@75..81
            Ident@75..81 "pg_lsn"
  Ascii41@81..82 ")"
  Ascii59@82..83 ";"

