crates/pg_syntax/tests/snapshots/postgres_regress/pg_lsn@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO PG_LSN_TBL VALUES ('FFFFFFFF/FFFFFFFF');"
---
InsertStmt@0..52
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "PG_LSN_TBL"
  Whitespace@22..23 " "
  SelectStmt@23..50
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..50
      AConst@31..50
        Sconst@31..50 "'FFFFFFFF/FFFFFFFF'"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

