crates/pg_syntax/tests/snapshots/postgres_regress/plancache@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select cache_test(3);
---
SelectStmt@0..21
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..19
    FuncCall@7..19
      Ident@7..17 "cache_test"
      Ascii40@17..18 "("
      AConst@18..19
        Iconst@18..19 "3"
  Ascii41@19..20 ")"
  Ascii59@20..21 ";"

