crates/pg_syntax/tests/snapshots/postgres_regress/plancache@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function cache_test_2() returns int as $$\nbegin\n\treturn f1 from v1;\nend$$ language plpgsql;"
---
CreateFunctionStmt@0..98
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..28 "cache_test_2"
  Ascii40@28..29 "("
  Ascii41@29..30 ")"
  Whitespace@30..31 " "
  Returns@31..38 "returns"
  Whitespace@38..39 " "
  TypeName@39..42
    IntP@39..42 "int"
  Whitespace@42..43 " "
  DefElem@43..80
    As@43..45 "as"
    Whitespace@45..46 " "
    List@46..80
      Sconst@46..80 "$$\nbegin\n\treturn f1 f ..."
  Whitespace@80..81 " "
  DefElem@81..97
    Language@81..89 "language"
    Whitespace@89..90 " "
    Ident@90..97 "plpgsql"
  Ascii59@97..98 ";"

